versions/0.8.0/_sources/refs/_aws-cdk_aws-autoscalingplans.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"g10uT2QaQ/u2AB8/8r0/H7a4mDMIJ1XC57QwyhNkF7M="}

@aws-cdk/aws-autoscalingplans
=============================

.. mdinclude:: ./__aws-cdk_aws-autoscalingplans.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-autoscalingplans


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-autoscalingplans.cloudformation

ScalingPlanResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: ScalingPlanResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ScalingPlanResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ScalingPlanResource``
   :type properties: :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ApplicationSourceProperty



      .. py:attribute:: cloudFormationStackArn

         ``ScalingPlanResource.ApplicationSourceProperty.CloudFormationStackARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-applicationsource.html#cfn-autoscalingplans-scalingplan-applicationsource-cloudformationstackarn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: tagFilters

         ``ScalingPlanResource.ApplicationSourceProperty.TagFilters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-applicationsource.html#cfn-autoscalingplans-scalingplan-applicationsource-tagfilters


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.TagFilterProperty` or undefined


   .. py:class:: CustomizedScalingMetricSpecificationProperty



      .. py:attribute:: dimensions

         ``ScalingPlanResource.CustomizedScalingMetricSpecificationProperty.Dimensions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-dimensions


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.MetricDimensionProperty` or undefined


      .. py:attribute:: metricName

         ``ScalingPlanResource.CustomizedScalingMetricSpecificationProperty.MetricName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-metricname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: namespace

         ``ScalingPlanResource.CustomizedScalingMetricSpecificationProperty.Namespace``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-namespace


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: statistic

         ``ScalingPlanResource.CustomizedScalingMetricSpecificationProperty.Statistic``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-statistic


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: unit

         ``ScalingPlanResource.CustomizedScalingMetricSpecificationProperty.Unit``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-unit


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: MetricDimensionProperty



      .. py:attribute:: name

         ``ScalingPlanResource.MetricDimensionProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-metricdimension.html#cfn-autoscalingplans-scalingplan-metricdimension-name


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: value

         ``ScalingPlanResource.MetricDimensionProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-metricdimension.html#cfn-autoscalingplans-scalingplan-metricdimension-value


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: PredefinedScalingMetricSpecificationProperty



      .. py:attribute:: predefinedScalingMetricType

         ``ScalingPlanResource.PredefinedScalingMetricSpecificationProperty.PredefinedScalingMetricType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-predefinedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-predefinedscalingmetricspecification-predefinedscalingmetrictype


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: resourceLabel

         ``ScalingPlanResource.PredefinedScalingMetricSpecificationProperty.ResourceLabel``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-predefinedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-predefinedscalingmetricspecification-resourcelabel


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: ScalingInstructionProperty



      .. py:attribute:: maxCapacity

         ``ScalingPlanResource.ScalingInstructionProperty.MaxCapacity``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-maxcapacity


         :type: number or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: minCapacity

         ``ScalingPlanResource.ScalingInstructionProperty.MinCapacity``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-mincapacity


         :type: number or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: resourceId

         ``ScalingPlanResource.ScalingInstructionProperty.ResourceId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-resourceid


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: scalableDimension

         ``ScalingPlanResource.ScalingInstructionProperty.ScalableDimension``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-scalabledimension


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: serviceNamespace

         ``ScalingPlanResource.ScalingInstructionProperty.ServiceNamespace``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-servicenamespace


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: targetTrackingConfigurations

         ``ScalingPlanResource.ScalingInstructionProperty.TargetTrackingConfigurations``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-targettrackingconfigurations


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.TargetTrackingConfigurationProperty`


   .. py:class:: TagFilterProperty



      .. py:attribute:: key

         ``ScalingPlanResource.TagFilterProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-tagfilter.html#cfn-autoscalingplans-scalingplan-tagfilter-key


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: values

         ``ScalingPlanResource.TagFilterProperty.Values``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-tagfilter.html#cfn-autoscalingplans-scalingplan-tagfilter-values


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: TargetTrackingConfigurationProperty



      .. py:attribute:: customizedScalingMetricSpecification

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.CustomizedScalingMetricSpecification``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-customizedscalingmetricspecification


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.CustomizedScalingMetricSpecificationProperty` or undefined


      .. py:attribute:: disableScaleIn

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.DisableScaleIn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-disablescalein


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: estimatedInstanceWarmup

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.EstimatedInstanceWarmup``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-estimatedinstancewarmup


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: predefinedScalingMetricSpecification

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.PredefinedScalingMetricSpecification``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-predefinedscalingmetricspecification


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.PredefinedScalingMetricSpecificationProperty` or undefined


      .. py:attribute:: scaleInCooldown

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.ScaleInCooldown``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-scaleincooldown


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: scaleOutCooldown

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.ScaleOutCooldown``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-scaleoutcooldown


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: targetValue

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.TargetValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-targetvalue


         :type: number or :py:class:`@aws-cdk/cdk.Token`



ScalingPlanResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ScalingPlanResourceProps



   .. py:attribute:: applicationSource

      ``AWS::AutoScalingPlans::ScalingPlan.ApplicationSource``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-autoscalingplans-scalingplan.html#cfn-autoscalingplans-scalingplan-applicationsource


      :type: :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.ApplicationSourceProperty` or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: scalingInstructions

      ``AWS::AutoScalingPlans::ScalingPlan.ScalingInstructions``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-autoscalingplans-scalingplan.html#cfn-autoscalingplans-scalingplan-scalinginstructions


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.ScalingInstructionProperty`



.. py:currentmodule:: @aws-cdk/aws-autoscalingplans

